# ilmanhinta

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.postgres  LICENSE  Makefile  README.md  SUMMARY.md  alembic.ini  dagster.yaml  docker-compose.override.yaml  docker-compose.prod.yml  docker-compose.signoz.yml  docker-compose.yml  duckdb-unified-architecture.md  fly.toml  init.sql  init_timescaledb_enhanced.sql  otel-collector-config.yaml  otel-lite.yaml  otel-signoz.yaml  prometheus.yml  pyproject.toml  railpack-etl.json  railway.json  render.yaml  signoz-clickhouse-config.xml  signoz-clickhouse-users.xml  signoz-otel-collector-config.yaml  signoz-prometheus.yml  sql_exporter.yml  test_timescaledb_migration.py
.github/workflows/: ci.yml
backups/: .gitkeep
db/: schema.sql
db/migrations/: 001_hybrid_forecasting_schema.sql
examples/: hybrid_forecasting_quickstart.py  price_prediction_workflow.py  test_comparison_api.py
migrations/: env.py
migrations/versions/: 04ac04d57f32_add_forecast_index.py  0ad289207078_baseline_timescaledb_schema.py  46a58062c388_add_unique_indexes_for_concurrent_.py
monitoring/: docker-compose.yml
scripts/: check_migration_status.sh  quickstart.sh  run_migrations.sh  start-etl.sh
services/api/: railpack.json
services/etl/: railway.json
src/ilmanhinta/: __init__.py  config.py  logging.py  schemas.py
src/ilmanhinta/api/: __init__.py  analytics.py  comparison.py  dagster_triggers.py  main.py  metrics.py  prices.py
src/ilmanhinta/api/static/css/: style.css
src/ilmanhinta/api/static/js/: dashboard.js
src/ilmanhinta/api/templates/: dashboard.html
src/ilmanhinta/clients/: __init__.py  fingrid.py  fmi.py
src/ilmanhinta/dagster/: __init__.py  consumption_pipeline.py  jobs.py  price_pipeline.py  price_prediction_jobs.py
src/ilmanhinta/db/: __init__.py  duckdb_client.py  postgres_client.py  prediction_store.py
src/ilmanhinta/ml/: __init__.py  ensemble.py  model.py  predict.py  price_model.py  prophet_model.py
src/ilmanhinta/models/: __init__.py  fingrid.py  fmi.py
src/ilmanhinta/processing/: __init__.py  dataset_builder.py  features.py  holiday_features.py  joins.py  price_features.py
src/ilmanhinta/scripts/: backfill_data.py  bootstrap_model.py  init_dagster_home.py  worker.py
tests/: __init__.py  test_models.py  test_processing.py
