[project]
name = "ilmanhinta"
version = "0.1.0"
description = "Finnish weather → energy consumption prediction ETL pipeline"
readme = "README.md"
requires-python = "~=3.11"
license = { text = "MIT" }
authors = [{ name = "ilmanhinta team" }]

dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-postgres>=0.23.0",
    "lightgbm>=4.2.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "holidays>=0.35",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=15.0.0",
    "fmiopendata>=0.5.0",
    "psycopg[binary]>=3.1.18",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "alembic>=1.12.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "dagster-graphql>=1.12.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pandas-stubs>=2.3.2.250926",
    "scipy-stubs>=1.16.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ilmanhinta"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "signoz",  # External submodule
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true
no_silence_site_packages = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["^signoz"]
plugins = ["pydantic.mypy"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/ilmanhinta --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.dagster]
module_name = "ilmanhinta.dagster"
